aws-deployment/cloudformation-template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'JalDrishti Streamlit Application on EC2 Free Tier'

Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair for SSH access
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must be the name of an existing EC2 KeyPair
  
  SSHLocation:
    Description: IP address range that can SSH to the EC2 instance
    Type: String
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: Must be a valid IP CIDR range

Resources:
  # Security Group
  JalDrishtiSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for JalDrishti application
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHLocation
          Description: SSH access
        - IpProtocol: tcp
          FromPort: 8501
          ToPort: 8501
          CidrIp: 0.0.0.0/0
          Description: Streamlit application
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
          Description: HTTP access
      Tags:
        - Key: Name
          Value: JalDrishti-SG

  # EC2 Instance
  JalDrishtiEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0c55b159cbfafe1f0  # Amazon Linux 2 AMI (update for your region)
      KeyName: !Ref KeyName
      SecurityGroups:
        - !Ref JalDrishtiSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y docker git
          service docker start
          usermod -a -G docker ec2-user
          curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
          chmod +x /usr/local/bin/docker-compose
          chkconfig docker on
      Tags:
        - Key: Name
          Value: JalDrishti-App
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 8
            VolumeType: gp2
            DeleteOnTermination: true

  # Elastic IP
  JalDrishtiEIP:
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref JalDrishtiEC2Instance
      Tags:
        - Key: Name
          Value: JalDrishti-EIP

Outputs:
  InstanceId:
    Description: Instance ID of the EC2 instance
    Value: !Ref JalDrishtiEC2Instance
  
  PublicIP:
    Description: Public IP address of the EC2 instance
    Value: !GetAtt JalDrishtiEC2Instance.PublicIp
  
  ElasticIP:
    Description: Elastic IP address
    Value: !Ref JalDrishtiEIP
  
  ApplicationURL:
    Description: URL to access the application
    Value: !Sub 'http://${JalDrishtiEIP}:8501'
  
  SSHCommand:
    Description: SSH command to connect to the instance
    Value: !Sub 'ssh -i ${KeyName}.pem ec2-user@${JalDrishtiEIP}'
